@@ -155,13 +155,13 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
         if (loginContext == null) {
             log.debug("Incoming request does not contain a login context, processing as first leg of request");
             performAuthentication(inTransport, outTransport);
-        }else if(!loginContext.isPrincipalAuthenticated()){
-            log.debug("Incoming request contained a login context but principal was not authenticated, processing as first leg of request");
-            performAuthentication(inTransport, outTransport);            
-        } else {
+        }else if(loginContext.isPrincipalAuthenticated() || loginContext.getAuthenticationFailure() != null){
             log.debug("Incoming request contains a login context, processing as second leg of request");
             HttpServletHelper.unbindLoginContext(getStorageService(), servletContext, httpRequest, httpResponse);
             completeAuthenticationRequest(loginContext, inTransport, outTransport);
+        }else {
+            log.debug("Incoming request contained a login context but principal was not authenticated, processing as first leg of request");
+            performAuthentication(inTransport, outTransport);            
         }
     }
 
