@@ -1,6 +1,7 @@
 Changes in Release 2.2.1
 =============================================
 [SIDP-421] - Error logging SOAP queries
+[SIDP-427] - Incorrect handling of returned authn error in SSO profile handlers
 [SIDP-428] - Address lifecycle issues around use of MetadataCredentialResolverFactory
 [SIDP-431] - Typo in default attribute-resolver.xml
 [SIDP-434] - More Typos in Default attribute-resolver.xml
